--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,24 @@
 <!doctype html>
 <head>
-    <title> b l a n k </title>
+    <title> chaos net art </title>
 </head>
 
-<body>
-   <canvas id="cnv_element"></canvas>
-   <script src="script.js"></script>
-</body>
+<html>
+  <script src="https://cdn.jsdelivr.net/npm/p5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/rita"></script>
+  <script src="script.js"></script>
+  <!-- <script>
+  function setup() {
+
+    createCanvas(200,200);
+    background(245);
+    textAlign(CENTER);
+    textSize(20);
+
+    let words = RiTa.tokenize("The elephant took a bite!")
+    for (let i=0; i < words.length; i++) {
+        text(words[i], 100, 50 + i*20);
+    }
+  }
+  </script> -->
+</html>
