--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 <html>
   <script src="https://cdn.jsdelivr.net/npm/p5"></script>
   <script src="https://cdn.jsdelivr.net/npm/rita"></script>
-  <script src="script.js"></script>
+  <script src="http://unpkg.com/tone"></script>
+  <script src="script.js" type="module"></script>
   <!-- <script>
   function setup() {
 
