--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
-    <title> chaos net art </title>
+  <title>chaos net art</title>
 </head>
 
 <html>
-  <script src="https://cdn.jsdelivr.net/npm/p5"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/p5"></script>
   <script src="https://cdn.jsdelivr.net/npm/rita"></script>
-  <script src="http://unpkg.com/tone"></script>
+  <script src="http://unpkg.com/tone"></script> -->
   <script src="script.js" type="module"></script>
   <!-- <script>
   function setup() {
